Atualizando os arquivos de pipe.

--- a/pipeline/canalizacoes.ipynb
+++ b/pipeline/canalizacoes.ipynb
@@ -149,9 +149,9 @@
         "colab": {}
       },
       "source": [
-        "colunas_cat = [coluna for coluna in X_treino.columns if\n",
-        "                    X_treino[coluna].nunique() < 10 and \n",
-        "                    X_treino[coluna].dtype == \"object\"]"
+        "colunas_cat = [coluna for coluna in X_treino.columns \n",
+        "               if X_treino[coluna].nunique() < 10 \n",
+        "               and X_treino[coluna].dtype == \"object\"]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -174,8 +174,8 @@
         "colab": {}
       },
       "source": [
-        "colunas_num = [coluna for coluna in X_treino.columns if \n",
-        "               X_treino[coluna].dtype in ['int64', 'float64']]"
+        "colunas_num = [coluna for coluna in X_treino.columns \n",
+        "               if X_treino[coluna].dtype in ['int64', 'float64']]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -187,7 +187,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Das colunas que selecionamos, vamos manter apenas elas nos dados de validacao, treino e teste."
+        "Das colunas que selecionamos, vamos manter apenas elas nos dados de validacao, treino e teste.\n",
+        "\n",
+        "Como fazemos para usar todas as colunas que selecionamos? Juntamos com +."
       ]
     },
     {
@@ -202,6 +204,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ASqW36YqS825",
+        "colab_type": "text"
+      },
+      "source": [
+        "Feito isso, vamos usar apenas essas colunas nos nossos dados de treino, teste e validação. Então vamos copia-las para novos Xs."
+      ]
     },
     {
       "cell_type": "code",
@@ -225,7 +237,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Beleza, agora podemos organizar a nossa pipeline.\n",
+        "Beleza, agora podemos organizar a nossa pipeline. A pipeline é uma sequência de passos. Esses passos geralmente involvem as etapas de preprocessamento e um modelo. Chamamos esses passos de steps.\n",
         "\n",
         "Ela vai ser algo assim:"
       ]
@@ -237,15 +249,16 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 198
+          "height": 195
         },
-        "outputId": "295d7bfd-a281-43f2-8fc4-d5be3062dfc2"
+        "outputId": "3120b51a-7fcf-42fb-fd26-2321a193de0b"
       },
       "source": [
-        "pipeline_1 = Pipeline(steps = [(preprocessador,\n",
-        "                                modelo)])"
+        "steps = [(preprocessador, modelo)]\n",
+        "\n",
+        "pipeline_1 = Pipeline(steps)"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "error",
@@ -254,7 +267,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-53eab9f29843>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m pipeline_1 = Pipeline(steps = [(preprocessador,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                 modelo)])\n",
+            "\u001b[0;32m<ipython-input-10-1c0e556d324b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msteps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreprocessador\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpipeline_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msteps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mNameError\u001b[0m: name 'preprocessador' is not defined"
           ]
         }
@@ -275,6 +288,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QFckzuthb6Vs",
+        "colab_type": "text"
+      },
+      "source": [
+        "Primeiro, para transformar os dados numéricos, vamos usar o simple imputer. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "prpv1F9PTgss",
@@ -282,10 +305,20 @@
         "colab": {}
       },
       "source": [
-        "transformer_num = SimpleImputer(strategy='constant')"
+        "transformer_num = SimpleImputer(strategy='mean')"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RQfGjHuscHuA",
+        "colab_type": "text"
+      },
+      "source": [
+        "E para os nossos dados categóricos, queremos usar o simple imputer e o one hot encoding, certo? Vamos escrevê-los."
+      ]
     },
     {
       "cell_type": "code",
@@ -295,13 +328,141 @@
         "colab": {}
       },
       "source": [
-        "transformer_cat = Pipeline(steps=[\n",
-        "    ('imputer', SimpleImputer(strategy='constant')),\n",
-        "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
-        "])"
+        "transformer_cat = (SimpleImputer(strategy='constant'),\n",
+        "                   OneHotEncoder(handle_unknown='ignore'))"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Blgw0DqhdS15",
+        "colab_type": "text"
+      },
+      "source": [
+        "E podemos especificar o nome de cada um desses processos."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lhjmIsyDdf-O",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "transformer_cat = ('simple imputer', SimpleImputer(strategy='constant')),('one hot encoder', OneHotEncoder(handle_unknown='ignore'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0KuD2kwDd9Cd",
+        "colab_type": "text"
+      },
+      "source": [
+        "Podemos também colocar essas tuplas em uma lista."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f53Z8kfJeBby",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "transformer_cat = [('simple imputer', SimpleImputer(strategy='constant')),\n",
+        "                   ('one hot encoder', OneHotEncoder(handle_unknown='ignore'))]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8ULoyBiTeNr0",
+        "colab_type": "text"
+      },
+      "source": [
+        "Como temos o passo 1 que é usar o simple imputer e o passo 2 que é usar o one hot ecoding, vou chamar a nossa lista de steps.\n",
+        "\n",
+        "Isso lembra alguma coisa? Sim aquela pipeline que tinha os steps."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wTiKRvT5fH-l",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "steps=[('imputer', SimpleImputer(strategy='constant')),\n",
+        "       ('onehot', OneHotEncoder(handle_unknown='ignore'))]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BSOwDS4xcwyd",
+        "colab_type": "text"
+      },
+      "source": [
+        "Repare que aqui nas variáveis categóricas já temos duas coisas acontecendo, dois passos, portanto, podemos usar uma pipeline."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gqYU-piQcn8Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "transformer_cat = Pipeline(steps)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MjdlAKt9fkQy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Agora vamos pegar cada um desses transformers e também colocá-los em uma lista."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VZNy0Q-ifsNp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "transformers=[('transformer_num', transformer_num, colunas_num),\n",
+        "              ('transformer_cat', transformer_cat, colunas_cat)]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s9iTzj4bfWSe",
+        "colab_type": "text"
+      },
+      "source": [
+        "E vamos definir o nosso preprocessador, ele faz o que? Pre processa as nossas colunas, certo? Então vai ser uma classe do tipo ColumnTransformer que recebe os nossos transformers."
+      ]
     },
     {
       "cell_type": "code",
@@ -311,13 +472,20 @@
         "colab": {}
       },
       "source": [
-        "preprocessador = ColumnTransformer(\n",
-        "    transformers=[\n",
-        "        ('transformer_num', transformer_num, colunas_num),\n",
-        "        ('transformer_cat', transformer_cat, colunas_cat)])"
+        "preprocessador = ColumnTransformer(transformers)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FaD8GyXVf8an",
+        "colab_type": "text"
+      },
+      "source": [
+        "Se olharmos no exemplo da pipeline inicial, temos os preprocessadores e o modelo, certo? Então vamos definir o modelo."
+      ]
     },
     {
       "cell_type": "code",
@@ -333,6 +501,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qQrHxMphgGng",
+        "colab_type": "text"
+      },
+      "source": [
+        "Com modelo e preprocessador definidos, basta reunirmos ambos em steps e colocá-los dentro de uma pipeline."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hV_rRdM2iKoy",
@@ -341,10 +519,40 @@
       },
       "source": [
         "pipeline_1 = Pipeline(steps=[('preprocessador', preprocessador),\n",
-        "                      ('modelo', modelo)])"
+        "                             ('modelo', modelo)])"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0Np8Q79JgSUr",
+        "colab_type": "text"
+      },
+      "source": [
+        "Repare que é melhor declarar os steps dentro do objeto, uma vez que ele fica atrelado à uma pipeline específica."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SjtPiaTogcEM",
+        "colab_type": "text"
+      },
+      "source": [
+        "Pronto, agora temos a nossa pipeline pronta e sempre que tivermos algum dado, ao invés de fazermos manualmente como até agora, ele irá passar pelos imputers e one hot encoding automaticamente. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SUcveylagtLV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Assim como para um modelo, temos os métodos fit e predict, veja que não precisamos mais 'arrumar' os dados agora que temos a pipeline."
+      ]
     },
     {
       "cell_type": "code",
@@ -353,14 +561,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 507
+          "height": 487
         },
-        "outputId": "45ee707c-0995-419f-d197-f9c674496a83"
+        "outputId": "3c3562b5-4284-4248-daf2-d429d66172c8"
       },
       "source": [
         "pipeline_1.fit(X_treino_selec, y_treino)"
       ],
-      "execution_count": 36,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -376,11 +584,11 @@
               "                                                                copy=True,\n",
               "                                                                fill_value=None,\n",
               "                                                                missing_values=nan,\n",
-              "                                                                strategy='constant',\n",
+              "                                                                strategy='mean',\n",
               "                                                                verbose=0),\n",
               "                                                  ['MSSubClass', 'LotFrontage',\n",
               "                                                   'LotArea', 'OverallQual',\n",
-              "                                                   'OverallCond', 'Y...\n",
+              "                                                   'OverallCond', 'YearB...\n",
               "                                   verbose=False)),\n",
               "                ('modelo',\n",
               "                 RandomForestRegressor(bootstrap=True, criterion='mse',\n",
@@ -399,7 +607,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 21
         }
       ]
     },
@@ -412,19 +620,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "01bf228b-c932-4074-c948-7365ca0be565"
+        "outputId": "647afd1e-0bbd-4095-9db0-15a856e1f1ec"
       },
       "source": [
         "preds = pipeline_1.predict(X_valid_selec)\n",
         "\n",
         "print('MAE:', mean_absolute_error(y_valid, preds))"
       ],
-      "execution_count": 37,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "MAE: 17969.249520547943\n"
+            "MAE: 18289.183561643833\n"
           ],
           "name": "stdout"
         }
@@ -442,6 +650,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8yqnWKJQg2Rh",
+        "colab_type": "text"
+      },
+      "source": [
+        "E pronto, agora basta salvarmos o resultado em um csv."
+      ]
     },
     {
       "cell_type": "code",
